Spacing fix.

--- a/css/app.css
+++ b/css/app.css
@@ -71,6 +71,10 @@ ol, ul {
   text-align: center;
 } 
 
+.text-left {
+  text-align: left;
+}
+
 .clear {
   clear: both;
 }
